<resources>
    <string name="app_name">Investor Profile Analyzer</string>
    <string name="home_title">Análise do Perfil de Investidor</string>
    <string name="home_subtitle">Questionário</string>
    <string name="home_body">Este questionário tem por objetivo de auxiliá-lo a identificar seu perfil de investidor (conservador, moderado ou arrojado) e recomendar os investimentos mais alinhados a esse perfil. Para cada questão, escolha a alternativa que mais se aproxima dos seus objetivos e expectativas de investimento.</string>
    <string name="metodology">A metodologia aplicada neste questionário foi desenvolvida pelo Banco Paulista.</string>
    <string name="first_question">1. Por quanto tempo você pretende deixar seu dinheiro investido?</string>
    <string name="second_question">2. Qual o objetivo desse investimento?</string>
    <string name="third_question">3. Qual das alternativas melhor classifica sua formação e experiência com o mercado financeiro?</string>
    <string name="fourth_question">4. Considerando seus rendimentos regulares, qual a porcentagem você pretende reservar para aplicações financeiras?</string>
    <string name="fifth_question">5. Caso as suas aplicações sofressem uma queda superior a 30%, o que você faria?</string>
    <string name="sixth_question">6. Como está distribuído o seu patrimônio?</string>
    <string name="seventh_question">7. Em relação as aplicações e rendimentos, em qual dessas situações você se enquadra? </string>
    <string name="eighth_question">8. Qual sua faixa de renda mensal média?</string>
    <string name="ninth_question">9. Qual o valor aproximado do seu patrimônio?</string>
    <string name="first_question_choice_a">Menos de 6 meses</string>
    <string name="first_question_choice_b">Entre 6 meses e 1 ano</string>
    <string name="first_question_choice_c">Entre 1 ano e 3 anos</string>
    <string name="first_question_choice_d">Acima de 3 anos</string>
    <string name="second_question_choice_a">Preservação do capital para não perder valor ao longo do tempo, assumindo baixos riscos de perdas</string>
    <string name="second_question_choice_b">Aumento gradual do capital ao longo do tempo, assumindo riscos moderados</string>
    <string name="second_question_choice_c">Aumento do capital acima da taxa de retorno média do mercado, mesmo que isso implique assumir riscos de perdas elevadas</string>
    <string name="second_question_choice_d">Obter no curto prazo retornos elevados e significativamente acima da taxa de retorno média do mercado, assumindo riscos elevados</string>
    <string name="third_question_choice_a">Não possuo formação acadêmica ou conhecimento do mercado financeiro</string>
    <string name="third_question_choice_b">Possuo formação acadêmica na área financeira, mas não tenho experiência com o mercado financeiro</string>
    <string name="third_question_choice_c">Possuo formação acadêmica em outra área, mas possuo conhecimento do mercado financeiro</string>
    <string name="third_question_choice_d">Possuo formação acadêmica na área financeira ou pleno conhecimento do mercado financeiro</string>
    <string name="fourth_question_choice_a">No máximo 25%</string>
    <string name="fourth_question_choice_b">Entre 25,01 e 50%</string>
    <string name="fourth_question_choice_c">Acima de 50%</string>
    <string name="fifth_question_choice_a">Resgataria toda a aplicação e aplicaria na poupança</string>
    <string name="fifth_question_choice_b">Manteria aplicação aguardando uma melhora do mercado </string>
    <string name="fifth_question_choice_c">Aumentaria a aplicação para aproveitar as oportunidades do mercado</string>
    <string name="sixth_question_choice_a">Meu patrimônio não está aplicado ou está todo aplicado em renda fixa e/ou imóveis</string>
    <string name="sixth_question_choice_b">Menos de 25% em renda variável e o restante em renda fixa e/ou imóveis</string>
    <string name="sixth_question_choice_c">Entre 25,01 e 50% aplicado em renda variável e o restante em renda fixa e/ou imóveis</string>
    <string name="sixth_question_choice_d">Acima de 50% em renda variável </string>
    <string name="seventh_question_choice_a">Conto com o rendimento dessas aplicações para complementar minha renda mensal</string>
    <string name="seventh_question_choice_b">Eventualmente posso resgatar parte das aplicações para fazer frente aos meus gastos. Contudo, não tenho intenção de resgatar no curto prazo e pretendo fazer aplicações regulares</string>
    <string name="seventh_question_choice_c">Não tenho intenção de resgatar no curto prazo, mas não pretendo realizar novas aplicações</string>
    <string name="seventh_question_choice_d">Não tenho intenção de resgatar no curto prazo e ainda pretendo fazer aplicações regulares</string>
    <string name="eighth_question_choice_a">Até R$ 1.000</string>
    <string name="eighth_question_choice_b">De R$ 1.001 até R$ 5.000</string>
    <string name="eighth_question_choice_c">De R$ 5.001 até R$ 10.000</string>
    <string name="eighth_question_choice_d">Acima de R$ 10.000</string>
    <string name="ninth_question_choice_a">Até R$ 10.000</string>
    <string name="ninth_question_choice_b">De R$ 10.001 até R$ 100.000</string>
    <string name="ninth_question_choice_c">De R$ 100.001 até R$ 500.000</string>
    <string name="ninth_question_choice_d">De R$ 500.001 até R$ 1.000.000</string>
    <string name="ninth_question_choice_e">Acima de R$ 1.000.001</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="begin_quiz">Iniciar questionário</string>
    <string name="next_button">Próxima</string>
    <string name="conservador">Você prefere segurança e não ter surpresas desagradáveis com seu dinheiro, mesmo que elas sejam temporárias.</string>
    <string name="moderado">Você já aceita alguns riscos. Portanto, você deve buscar investimentos que ofereçam maior retorno do que título públicos e renda fixa.</string>
    <string name="arrojado">Você lida bem com riscos. procure investir seu dinheiro de longo prazo em investimentos com maior potencial de retorno, deixando pelo menos 25% do seu patrimônio em investimentos seguros.</string>
    <string name="finish_quiz">Finalizar</string>
    <string name="home">Home</string>
    <string name="unselected_radio_button">Por favor selecione uma alternativa!</string>
    <string name="redo_quiz">Refazer teste</string>
    <string name="calculate">Calcular</string>
</resources>