<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="camell.oncase.investorprofileanalyzer.viewmodel.InvestorProfileViewModel" />
        <variable
            name="sixthQuestionFragment"
            type="camell.oncase.investorprofileanalyzer.fragments.SixthQuestionFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sixthFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.SixthQuestionFragment">

        <TextView
            android:id="@+id/sixthQuestionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_start"
            android:paddingEnd="@dimen/padding_end"
            android:text="@string/sixth_question"
            android:textColor="@color/black"
            android:textSize="@dimen/question_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.17" />

        <RadioGroup
            android:id="@+id/sixthQuestionRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_start"
            android:paddingEnd="@dimen/padding_end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sixthQuestionTextView"
            app:layout_constraintVertical_bias="0.20">

            <RadioButton
                android:id="@+id/sixthQuestionRadioButtonA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.punctuation.equals(0)}"
                android:onClick="@{() -> viewModel.setPunctuation(0)}"
                android:text="@string/sixth_question_choice_a"
                android:textSize="@dimen/body_text_size" />

            <RadioButton
                android:id="@+id/sixthQuestionRadioButtonB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.punctuation.equals(2)}"
                android:onClick="@{() -> viewModel.setPunctuation(2)}"
                android:text="@string/sixth_question_choice_b"
                android:textSize="@dimen/body_text_size" />

            <RadioButton
                android:id="@+id/sixthQuestionRadioButtonC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.punctuation.equals(3)}"
                android:onClick="@{() -> viewModel.setPunctuation(3)}"
                android:text="@string/sixth_question_choice_c"
                android:textSize="@dimen/body_text_size" />

            <RadioButton
                android:id="@+id/sixthQuestionRadioButtonD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.punctuation.equals(4)}"
                android:onClick="@{() -> viewModel.setPunctuation(4)}"
                android:text="@string/sixth_question_choice_d"
                android:textSize="@dimen/body_text_size" />

        </RadioGroup>

        <Button
            android:id="@+id/sixthQuestionNextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sixthQuestionRadioGroup"
            app:layout_constraintVertical_bias="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>